fix: add yarn globally for ios builds...

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -332,6 +332,7 @@ jobs:
       - run:
           name: Check if the test should run
           command: |
+            yarn global add ts-node
             ./scripts/ci_check_if_test_should_run_v2.sh mobile
 
       - run:
