build: try just yarn install and hope ts-node gets picked up from dev deps

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -332,7 +332,7 @@ jobs:
       - run:
           name: Check if the test should run
           command: |
-            yarn add ts-node -W
+            yarn
             ./scripts/ci_check_if_test_should_run_v2.sh mobile
 
       - run:
