--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -330,6 +330,12 @@ jobs:
     steps:
       - checkout
       - run:
+          name: Install node 10
+          command: |
+            curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.35.3/install.sh | bash
+            nvm install 10
+            nvm alias default 10
+      - run:
           name: Check if the test should run
           command: |
             yarn
