--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -334,7 +334,7 @@ jobs:
           command: |
             brew uninstall --ignore-dependencies node icu4c
             brew install node@10
-            brew link --overwrite node@10
+            brew link --overwrite --force node@10
             node --version
             yarn --version
       - run:
